# JStoCpp-Networking

./: .gitignore  CMakeLists.txt  README.md
cpp-server/: CMakeLists.txt
cpp-server/src/: main.cpp
web-client/: index.html
